<resources>
    <string name="appName">plm2</string>
    <string name="settings">Настройки</string>
    <string name="mediateka">Медиатека</string>
    <string name="search">Поиск</string>

    <string name="darkTheme">Темная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="writeToSupport">Написать в поддержку</string>
    <string name="termsOfUse">Пользовательское соглашение</string>
    <string name="playlistMaker">Playlist maker</string>
    <string name="arr">Стрелка</string>

    <!-- Кнопки -->
    <string name="shareButtonText" translatable="false">
        https://practicum.yandex.ru/android-developer/
    </string>

    <string name="themeMail">
        «Сообщение разработчикам и разработчицам приложения Playlist Maker»
    </string>
    <string name="textMail">
        «Спасибо разработчикам и разработчицам за крутое приложение!»
    </string>

    <string name="termsArticle" translatable="false">
        https://yandex.ru/legal/practicum_offer/
    </string>

    <!-- Тут все для медиатеки -->
    <string name="song_name">Название песни</string>
    <string name="artist_name">Исполнитель</string>
    <string name="duration">Длительность</string>
    <string name="icon_this">Иконка тут</string>
    <string name="todo">TODO</string>
    <string name="artist_and_time">%s • %s</string>
    <string name="refresh_button">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась.Проверьте\nподключение к интернету</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <!-- Тут все для Аудиоплеера -->
    <string name="no_internet_connect">Нет соединения с Интернетом</string>
    <string name="error_network">Произошла ошибка сети. Попробуйте позже.</string>

    <!-- Длительность выше, дублирую из медиатеки -->
    <string name="album">Альбом</string>
    <string name="year">Год</string>Genre
    <string name="genre">Жанр</string>country
    <string name="country">Страна</string>
</resources>
