<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <!-- Оглавление страницы Playlist maker -->
    <LinearLayout style="@style/pageSettings_string_head"
        tools:ignore="MissingConstraints">
        <TextView style="@style/pageMain_Head"
            android:text="@string/playlist_maker"  />
    </LinearLayout>
    <LinearLayout style="@style/pageMain_box_for_btn"
        tools:ignore="MissingConstraints">

        <!-- Обьект "Поиск"  -->
        <Button android:id="@+id/search"
            android:text="@string/search"
            app:icon="@drawable/ic_search2"
            style="@style/pageMain_btn" >
        </Button>

        <!-- Обьект "Медиатека" -->
        <Button android:id="@+id/media"
            android:text="@string/mediateka"
            app:icon="@drawable/ic_media2"
            style="@style/pageMain_btn">
        </Button>

        <!-- Обьект "Настройки" -->
        <Button android:id="@+id/settings"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            style="@style/pageMain_btn">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>