<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Заголовок страницы -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundSettingsPage"
        android:orientation="vertical">

        <!-- Строка "Настройки" -->
        <LinearLayout
            style="@style/pageSettingsStringHead">

            <!-- Иконка "Назад" -->
            <ImageView
                android:id="@+id/arrBack"
                style="@style/pageSettingsArrBack"
                android:src="@drawable/ic_arrow_back" />

            <!-- Текст "Настройки" -->
            <TextView
                style="@style/pageSettingsTextSettings"
                android:text="@string/settings" />
        </LinearLayout>

        <!-- Секция "Темная тема" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Заголовок "Темная тема" -->
            <TextView
                style="@style/pageSettingsTextNightTheme"
                android:text="@string/darkTheme" />

            <!-- Переключатель -->

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchCompat"
                style="@style/pageSettingsSwitch" />
        </LinearLayout>

        <!-- Секция "Поделиться приложением" -->
        <LinearLayout
            style="@style/pageSettingsStringSimple">
            <FrameLayout
                android:id="@+id/shareButton"
                style="@style/pageSettingsStringFrame">

                <!-- Заголовок "Поделиться приложением" -->
                <TextView
                    style="@style/pageSettingsStringText"
                    android:text="@string/shareApp" />

                <!-- Иконка "Поделиться" -->
                <ImageView
                    style="@style/pageSettingsStringIcon"
                    android:src="@drawable/ic_share" />
            </FrameLayout>
        </LinearLayout>

        <!-- Секция "Написать в техподдержку" -->
        <LinearLayout
            style="@style/pageSettingsStringSimple">
            <FrameLayout
                android:id="@+id/btnSupport"
                style="@style/pageSettingsStringFrame">

                <!-- Заголовок "Написать в техподдержку" -->
                <TextView
                    style="@style/pageSettingsStringText"
                    android:text="@string/writeToSupport" />

                <!-- Иконка "Техподдержка" -->
                <ImageView
                    style="@style/pageSettingsStringIcon"
                    android:src="@drawable/ic_support" />
            </FrameLayout>
        </LinearLayout>

        <!-- Секция "Пользовательское соглашение" -->
        <LinearLayout
            style="@style/pageSettingsStringSimple">
            <FrameLayout
                android:id="@+id/btnTerms"
                style="@style/pageSettingsStringFrame">

                <!-- Заголовок "Пользовательское соглашение" -->
                <TextView
                    style="@style/pageSettingsStringText"
                    android:text="@string/termsOfUse" />

                <!-- Иконка "Стрелка вправо" -->
                <ImageView
                    style="@style/pageSettingsStringIcon"
                    android:src="@drawable/ic_arrow_forward" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
